# portfolio

./: .dockerignore  Dockerfile  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: python-tests.yml
migrations/: env.py
migrations/versions/: 5e64f9942f6c_added_todo_table.py
tests/: test_api.py  test_main.py  test_models.py
todo-app/: Dockerfile  pyproject.toml
todo-app/.github/workflows/: python-tests.yml
todo-app/tests/: test_api.py  test_main.py
todo-app/todo_app/: api.py  main.py
todo_app/: api.py  database.py  main.py  models.py
