[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = ""
authors = ["Pablo Cacciagioni <pablo.cacciagion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pylint = "^3.2.2"
black = "^24.4.2"
pytest = "^8.2.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov-report=term --cov-report=xml --cov=todo_app"
testpaths = ["tests"]
